gccida/c1/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_abstract_function/src/dwarf2out.c:10602:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_abstract_function/src/dwarf2out.c:10605:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_abstract_function/src/dwarf2out.c:10607:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_abstract_function/src/dwarf2out.c:10616:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
